--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,10 +4,9 @@
 * {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: white;
-  background-color: #292c33;
 }
 
 a {
