--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,9 +4,16 @@
 * {
   padding: 0;
   margin: 0;
+  -ms-overflow-style: none;
+  
+  scrollbar-width: none;
   scroll-behavior: smooth;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 a {
